# rsgrep

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs  rsgrep.rs
test/tree/: file1  file2  link1
test/tree/F1/: file3  file4
test/tree/F1/F3/F4/: file6  link2
test/tree/F1/F3/F5/: file7
test/tree/F1/F6/: file5
test/tree/F2/: link3
