[package]
name = "rsgrep"
version = "0.4.0"
authors = ["Christian Blume <chr.blume@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple version of grep implemented in Rust"
homepage = "https://github.com/bloomen/rsgrep"
documentation = "https://github.com/bloomen/rsgrep"
repository = "https://github.com/bloomen/rsgrep"
readme = "README.md"

[dependencies]
clap = "2.33.0"
content_inspector = "0.2.4"
